# ELTE-korszam1-2022

./: .gitignore  README.md
assignment1/: CMakeLists.txt
assignment1/src/: NewtonIteration.cpp  NewtonIteration.h  main.cpp
assignment3/: CMakeLists.txt
assignment3/src/: LinearFit.cpp  LinearFit.h  Linspace.cpp  Linspace.h  main.cpp
assignment4/: CMakeLists.txt
assignment4/src/: main.cpp  vector2.h
assignment5/: CMakeLists.txt
assignment5/src/: main.cpp
assignment6/: CMakeLists.txt  plot_result.py
assignment6/src/: main.cpp  matrix.h
docs/: textfile.txt
